
2016-11-06 Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* configure.ac: limit PATCH_LEVEL to numeric, max 8 digits
	* configure.ac: use AS_HELP_STRING for all options

2016-11-05 Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* Bootstrap up to libtool 2.4.6 / automake 1.15

2016-11-05  gettextize  <bug-gnu-gettext@gnu.org>

	* m4/gettext.m4: Upgrade to gettext-0.19.8.1.
	* m4/iconv.m4: Upgrade to gettext-0.19.8.1.
	* m4/lib-ld.m4: Upgrade to gettext-0.19.8.1.
	* m4/lib-link.m4: Upgrade to gettext-0.19.8.1.
	* m4/lib-prefix.m4: Upgrade to gettext-0.19.8.1.
	* m4/nls.m4: Upgrade to gettext-0.19.8.1.
	* m4/po.m4: Upgrade to gettext-0.19.8.1.
	* m4/progtest.m4: Upgrade to gettext-0.19.8.1.
	* configure.ac (AM_GNU_GETTEXT_VERSION): Bump to 0.19.8.

2016-08-10  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* Makefile.am: added manual hook for creating a windows source zip
	  (not possible with the dist-zip target as this is identical to
	  dist-gzip), done with optional external shell create_win_dist.sh
	* create_win_dist.sh: copy an existing source distribution folder,
	  include build_windows from source tree, change line endings and
	  create DISTNAME_win.zip

2016-08-10  Edward Hart <edward.dan.hart@gmail.com>

	* configure.ac: added -g3 to CFLAGS with --enable-debug and GCC.

2016-08-01  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* general: revised all message strings

2016-05-04  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* general: removed project files and references to Visual C < 2005
	  (GC 2+ will not build with these versions) including define of
	  COB_USE_VC2005_OR_GREATER

2016-01-30  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* configure.ac: removed AC_FUNC_ALLOCA

2016-01-12  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* Makefile.am: added targets "test" (running ANSI testsuite) and
	  "checkall" (running both GnuCOBOL and ANSI testsuite), both do a